Removes minima as dependency, adds tachyons stylesheet

--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,10 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: rpdasilva
 github_username:  rpdasilva
+repository: rpdasilva/rpdasilva.github.io
 
 # Build settings
 markdown: kramdown
-theme: minima
 gems:
   - jekyll-feed
 exclude:
